syntax = "proto3";

package media;

import 'proto/subtitle/subtitle.proto';

option go_package = "github.com/nandesh-dev/subtle/generated/proto/media";

service MediaService {
  rpc GetDirectory(GetDirectoryRequest) returns (GetDirectoryResponse);
  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse);
  rpc ExtractRawStream(ExtractRawStreamRequest) returns (ExtractRawStreamResponse);
}

message GetVideoRequest {
  int32 id = 1;
}

message GetVideoResponse {
  repeated subtitle.Subtitle subtitles = 1;
  repeated RawStream raw_streams = 2;
}

message GetDirectoryRequest {
  string path = 1;
}

message GetDirectoryResponse {
  repeated Directory directories = 1;
  repeated Video videos = 2;
}

message ExtractRawStreamRequest {
  int32 video_id = 1;
  int32 raw_stream_index = 2;

  string title = 3;
}

message ExtractRawStreamResponse {}

message Directory {
  string path = 1;
  string name = 2;
}

message Video {
  int32 id = 1;
  string base_name = 2;
  string extension = 3;
}

message RawStream {
  int32 index = 1;
  string format = 2;
  string language = 3;
  string title = 4;
}
